--- a/News&Offerte.html
+++ b/News&Offerte.html
@@ -126,40 +126,43 @@
         <h1 id="TitoloNews"> NEWS & OFFERTE</h1>
         <div class="row mt-5" id="testo">
             <div class="col">
-                <img src="https://cdn.discordapp.com/attachments/980551328537399370/1037042135700082698/somnicard_fronte-retro.png" class="ImgCards mb-3 mt-3" alt=""
-                    height="300vw">
+                <img src="https://cdn.discordapp.com/attachments/980551328537399370/1037042135700082698/somnicard_fronte-retro.png"
+                    class="ImgCards mb-3 mt-3" alt="" height="300vw">
             </div>
             <div class="col fs-3">
                 <strong>
                     <p class="titoloNews text-start mt-5">SOMNICARDS!</p>
                 </strong>
-                <p class="descrizione text-start"> Scopri le carte prepagate <b>SomniCards</b>, il vantaggio è unico! Puoi
+                <p class="descrizione text-start"> Scopri le carte prepagate <b>SomniCards</b>, il vantaggio è unico!
+                    Puoi
                     acquistare 5 biglietti a un prezzo davvero vantaggioso.</p>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <img src="https://cdn.discordapp.com/attachments/980551328537399370/1037048335799959604/gift_cards.png" alt=""
-                    height="300vw" class="ImgCards mb-3 mt-3">
+                <img src="https://cdn.discordapp.com/attachments/980551328537399370/1037048335799959604/gift_cards.png"
+                    alt="" height="300vw" class="ImgCards mb-3 mt-3">
             </div>
             <div class="col fs-3">
                 <strong>
                     <p class="titoloNews text-start">GIFT CARDS</p>
                 </strong>
-                <p class="descrizione text-start"> Scopri la carta regalo spendibile in biglietteria o al bar, ideale per gli amanti
+                <p class="descrizione text-start"> Scopri la carta regalo spendibile in biglietteria o al bar, ideale
+                    per gli amanti
                     del cinema e per ogni occasione speciale.</p>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <img src="https://cdn.discordapp.com/attachments/1025133315637915648/1037361086225186908/bubucard.png" alt=""
-                    height="300vw" class="ImgCards mb-3 mt-3">
+                <img src="https://cdn.discordapp.com/attachments/1025133315637915648/1037361086225186908/bubucard.png"
+                    alt="" height="300vw" class="ImgCards mb-3 mt-3">
             </div>
             <div class="col fs-3">
                 <strong>
                     <p class="titoloNews text-start">BUBUCARDS</p>
                 </strong>
-                <p class="descrizione text-start"> Scopri tutti i vantaggi delle <b>BubuCards</b> carta fedeltà che premia i nostri
+                <p class="descrizione text-start"> Scopri tutti i vantaggi delle <b>BubuCards</b> carta fedeltà che
+                    premia i nostri
                     clienti più affezionati con offerte, promozioni e sorprese esclusive.</p>
             </div>
         </div>
@@ -172,33 +175,36 @@
                 <strong>
                     <p class="titoloNews text-start">SALA RISERVATA</p>
                 </strong>
-                <p class="descrizione text-start"> Ti piacerebbe organizzare una proiezione riservata con la tua famiglia o i tuoi
+                <p class="descrizione text-start"> Ti piacerebbe organizzare una proiezione riservata con la tua
+                    famiglia o i tuoi
                     amici? Da Somnia il sogno diventa realtà! scopri tutti i dettagli.</p>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <img src="https://www.ucicinemas.it/media/content/2022/09/29/kidsbirthday-1.png" alt=""
-                    height="300vw" class="mb-3 mt-3">
+                <img src="https://www.ucicinemas.it/media/content/2022/09/29/kidsbirthday-1.png" alt="" height="300vw"
+                    class="mb-3 mt-3">
             </div>
             <div class="col fs-3">
                 <strong>
                     <p class="titoloNews text-start">FESTE DI COMPLEANNO</p>
                 </strong>
-                <p class="descrizione text-start"> Vuoi rendere unica e speciale la tua festa di compleanno? Scopri il pacchetto
+                <p class="descrizione text-start"> Vuoi rendere unica e speciale la tua festa di compleanno? Scopri il
+                    pacchetto
                     dedicato di Somnia per festeggiare come una vera star.</p>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <img src="https://www.ucicinemas.it/media/content/2022/09/29/wedding.png" alt=""
-                    height="300vw" class="mb-3 mt-3">
+                <img src="https://www.ucicinemas.it/media/content/2022/09/29/wedding.png" alt="" height="300vw"
+                    class="mb-3 mt-3">
             </div>
             <div class="col fs-3">
                 <strong>
                     <p class="titoloNews text-start">WEDDING</p>
                 </strong>
-                <p class="descrizione text-start">Tutte le tue emozioni possono rivivere sul grande schermo: la tua proposta di
+                <p class="descrizione text-start">Tutte le tue emozioni possono rivivere sul grande schermo: la tua
+                    proposta di
                     matrimonio, le immagini di famiglia e tutto ciò che desideri può diventare ancora più magico in una
                     sala del nostro cinema! Scopri di più direttamente presso Somnia Cinema </p>
             </div>
@@ -212,7 +218,8 @@
                 <strong>
                     <p class="titoloNews text-start">PROIEZIONI PER LE SCUOLE</p>
                 </strong>
-                <p class="descrizione text-start"> Somnia Cinema è la location ideale per una festa di fine anno scolastico davvero
+                <p class="descrizione text-start"> Somnia Cinema è la location ideale per una festa di fine anno
+                    scolastico davvero
                     indimenticabile, oppure una gita con il centro estivo. Scopri tutte le opportunità dedicate alle
                     scuole, chiedendo direttamente a noi. </p>
             </div>
@@ -257,7 +264,10 @@
                             <i class="fas fa-gem me-3 text-secondary"></i>Somnia Cinema
                         </h6>
                         <p>
-                            Dove i tuoi sogni diventano realtà
+                            Chi siamo
+                        </p>
+                        <p>
+                            Lavora con noi
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -266,13 +276,19 @@
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            Products
+                            Note Legali
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Angular</a>
+                            <a href="#!" class="text-reset">Privacy Policy</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">React</a>
+                            <a href="#!" class="text-reset">Cookie Policy</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Condizioni di utilizzo</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Regolamenti</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -288,6 +304,9 @@
                         </p>
                         <p>
                             <a href="#!" class="text-reset">Help</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">FAQ</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -305,6 +324,12 @@
                     </div>
                     <!-- Grid column -->
                 </div>
+                <div class="row">
+                    <div id="teamKino">
+                        <img src="https://cdn.discordapp.com/attachments/1025133315637915648/1038024954538643516/logo_tk.png"
+                            height="100vw" alt="" class="center">
+                    </div>
+                </div>
                 <!-- Grid row -->
             </div>
         </section>
@@ -313,7 +338,9 @@
         <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
             © 2022 Copyright:
-            <a class="text-reset" href="https://mdbootstrap.com/">SOMNIA CINEMA</a>
+            <a class="text-reset" href="https://mdbootstrap.com/">Somnia Cinema</a>
+            <br>
+            <a>A product by Team Kino</a>
         </div>
         <!-- Copyright -->
     </footer>
