--- a/Utente privato.html
+++ b/Utente privato.html
@@ -124,9 +124,9 @@
     <div class="container">
         <div class="row mt-5">
             <div class="col" id="imgUtente">
-                <div class="imgProfilo"><span class="btn btn-sm rounded-circle" id="btnModificaImg" >
-                    <img src="img/avatar/profilo10.png"  height="300" 
-                    alt="Black and White Portrait of a Man" loading="lazy" />
+                <div class="imgProfilo"><span class="btn btn-sm rounded-circle" id="btnModificaImg">
+                        <img src="img/avatar/profilo10.png" height="300" alt="Black and White Portrait of a Man"
+                            loading="lazy" />
                 </div></span>
                 <p class="mt-5 fs-4" id="centro">Username</p>
             </div>
@@ -152,7 +152,7 @@
                     nunc,
                 </p>
                 <div><button class="btn btn-primary btn-sm" id="btnModificaDesc">Modifica Descrizione</button> </div>
-            </div>       
+            </div>
         </div>
 
         <div class="row mt-5">
@@ -184,8 +184,8 @@
         <div class="row mt-5">
             <h3>FILM VALUTATI</h3>
             <form>
-                <div class = "col mt-5">
-                    <img id = "imgFilm" src = "img/film/black-adam.jpeg" >
+                <div class="col mt-5">
+                    <img id="imgFilm" src="img/film/black-adam.jpeg">
                 </div>
                 <div class="col">
                     <p id="nomeFilm1">Black Adam</p>
@@ -202,7 +202,7 @@
                         <label class="stellaPiena" for="valutazione3"></label>
 
                         <input type="radio" name="rate" id="valutazione4" data-idx="4" hidden>
-                        <label class="stellaPiena"for="valutazione4"></label>
+                        <label class="stellaPiena" for="valutazione4"></label>
 
                         <input type="radio" name="rate" id="valutazione5" data-idx="5" hidden>
                         <label class="stellaPiena" for="valutazione5"></label>
@@ -213,8 +213,8 @@
         </div>
         <div class="row mt-5">
             <form>
-                <div class = "col mt-5">
-                    <img id = "imgFilm" src = "img/film/black-adam.jpeg" >
+                <div class="col mt-5">
+                    <img id="imgFilm" src="img/film/black-adam.jpeg">
                 </div>
                 <div class="col">
                     <p id="nomeFilm2">Black adam</p>
@@ -228,7 +228,7 @@
                         <label class="stellaVuota" for="valutazione7"></label>
 
                         <input type="radio" name="rate" id="valutazione8" data-idx="3" hidden>
-                        <label class="stellaVuota"for="valutazione8"></label>
+                        <label class="stellaVuota" for="valutazione8"></label>
 
                         <input type="radio" name="rate" id="valutazione9" data-idx="4" hidden>
                         <label class="stellaPiena" for="valutazione9"></label>
@@ -242,8 +242,8 @@
         </div>
         <div class="row mt-5">
             <form>
-                <div class = "col mt-5">
-                    <img id = "imgFilm" src = "img/film/black-adam.jpeg" >
+                <div class="col mt-5">
+                    <img id="imgFilm" src="img/film/black-adam.jpeg">
                 </div>
                 <div class="col">
                     <p id="nomeFilm3">Black Adam</p>
@@ -263,7 +263,7 @@
                         <label class="stellaPiena" for="valutazione14"></label>
 
                         <input type="radio" name="rate" id="valutazione15" data-idx="5" hidden>
-                        <label class="stellaPiena"for="valutazione15"></label>
+                        <label class="stellaPiena" for="valutazione15"></label>
                     </div>
 
                 </div>
@@ -307,7 +307,10 @@
                             <i class="fas fa-gem me-3 text-secondary"></i>Somnia Cinema
                         </h6>
                         <p>
-                            Dove i tuoi sogni diventano realtà
+                            Chi siamo
+                        </p>
+                        <p>
+                            Lavora con noi
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -316,13 +319,19 @@
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            Products
+                            Note Legali
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Angular</a>
+                            <a href="#!" class="text-reset">Privacy Policy</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">React</a>
+                            <a href="#!" class="text-reset">Cookie Policy</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Condizioni di utilizzo</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Regolamenti</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -338,6 +347,9 @@
                         </p>
                         <p>
                             <a href="#!" class="text-reset">Help</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">FAQ</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -355,6 +367,12 @@
                     </div>
                     <!-- Grid column -->
                 </div>
+                <div class="row">
+                    <div id="teamKino">
+                        <img src="https://cdn.discordapp.com/attachments/1025133315637915648/1038024954538643516/logo_tk.png"
+                            height="100vw" alt="" class="center">
+                    </div>
+                </div>
                 <!-- Grid row -->
             </div>
         </section>
@@ -363,7 +381,9 @@
         <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
             © 2022 Copyright:
-            <a class="text-reset" href="https://mdbootstrap.com/">SOMNIA CINEMA</a>
+            <a class="text-reset" href="https://mdbootstrap.com/">Somnia Cinema</a>
+            <br>
+            <a>A product by Team Kino</a>
         </div>
         <!-- Copyright -->
     </footer>
