--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
         </div>
     </div>
 
+   
     <!-- Footer -->
     <footer class="text-center text-lg-start bg-BLACK text-muted GY-5">
         <!-- Section: Social media -->
@@ -214,7 +215,10 @@
                             <i class="fas fa-gem me-3 text-secondary"></i>Somnia Cinema
                         </h6>
                         <p>
-                            Dove i tuoi sogni diventano realtà
+                            Chi siamo
+                        </p>
+                        <p>
+                            Lavora con noi
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -223,13 +227,19 @@
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            Products
+                            Note Legali
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Angular</a>
+                            <a href="#!" class="text-reset">Privacy Policy</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">React</a>
+                            <a href="#!" class="text-reset">Cookie Policy</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Condizioni di utilizzo</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Regolamenti</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -245,6 +255,9 @@
                         </p>
                         <p>
                             <a href="#!" class="text-reset">Help</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">FAQ</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -262,6 +275,11 @@
                     </div>
                     <!-- Grid column -->
                 </div>
+                <div class="row">
+                    <div id="teamKino">
+                        <img src="https://cdn.discordapp.com/attachments/1025133315637915648/1038024954538643516/logo_tk.png" height="100vw" alt="" class="center">
+                    </div>
+                </div>
                 <!-- Grid row -->
             </div>
         </section>
@@ -270,7 +288,9 @@
         <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
             © 2022 Copyright:
-            <a class="text-reset" href="https://mdbootstrap.com/">SOMNIA CINEMA</a>
+            <a class="text-reset" href="https://mdbootstrap.com/">Somnia Cinema</a>
+            <br>
+            <a>A product by Team Kino</a>
         </div>
         <!-- Copyright -->
     </footer>
