--- a/prenotazioni.html
+++ b/prenotazioni.html
@@ -171,10 +171,10 @@
         </button>
     </div>
     <!-- Carousel wrapper -->
-    
+
     <h1 class="my-5">Prenotazioni</h1>
     <section>
-        <div class="container"  id="containerPrenotazioni">
+        <div class="container" id="containerPrenotazioni">
             <div class="row">
                 <div class="col">
                     <div class="card">
@@ -190,13 +190,13 @@
                             <div class="col">
                                 <img class="mt-2 mb-3" src="img/qr.png" alt="" style="max-width: 110px;">
                             </div>
-                            <div class="rating pb-0"> 
+                            <div class="rating pb-0">
                                 <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label>
                                 <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label>
                                 <input type="radio" name="rating" value="3" id="3"><label for="3">☆</label>
                                 <input type="radio" name="rating" value="2" id="2"><label for="2">☆</label>
                                 <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label>
-                              </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -249,7 +249,10 @@
                             <i class="fas fa-gem me-3 text-secondary"></i>Somnia Cinema
                         </h6>
                         <p>
-                            Dove i tuoi sogni diventano realtà
+                            Chi siamo
+                        </p>
+                        <p>
+                            Lavora con noi
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -258,13 +261,19 @@
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            Products
+                            Note Legali
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Angular</a>
+                            <a href="#!" class="text-reset">Privacy Policy</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">React</a>
+                            <a href="#!" class="text-reset">Cookie Policy</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Condizioni di utilizzo</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Regolamenti</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -280,6 +289,9 @@
                         </p>
                         <p>
                             <a href="#!" class="text-reset">Help</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">FAQ</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -297,6 +309,12 @@
                     </div>
                     <!-- Grid column -->
                 </div>
+                <div class="row">
+                    <div id="teamKino">
+                        <img src="https://cdn.discordapp.com/attachments/1025133315637915648/1038024954538643516/logo_tk.png"
+                            height="100vw" alt="" class="center">
+                    </div>
+                </div>
                 <!-- Grid row -->
             </div>
         </section>
@@ -305,11 +323,14 @@
         <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
             © 2022 Copyright:
-            <a class="text-reset" href="https://mdbootstrap.com/">SOMNIA CINEMA</a>
+            <a class="text-reset" href="https://mdbootstrap.com/">Somnia Cinema</a>
+            <br>
+            <a>A product by Team Kino</a>
         </div>
         <!-- Copyright -->
     </footer>
     <!-- Footer -->
+
 
     <!-- Modal Login -->
     <div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
