--- a/Condizioni.html
+++ b/Condizioni.html
@@ -111,7 +111,7 @@
                     </div>
                     <!-- Icon -->
                     <a class="text-reset" href="#">
-                        <img src="img/icona_carrello.png" alt="" width="77re" id="iconaCarello">
+                        <img src="img/icona_carrello.png" alt="" width="77re">
                     </a>
                 </div>
                 <!-- Right elements -->
@@ -121,98 +121,87 @@
         <!-- Navbar -->
     </header>
 
+    <!-- RIGHE E COLONNE NEWS -->
 
-    <!-- Carousel wrapper -->
-    <div id="carouselBasicExample" class="carousel slide carousel-fade mb-5" data-mdb-ride="carousel">
-        <!-- Indicators -->
-        <div class="carousel-indicators">
-            <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="2"
-                aria-label="Slide 3"></button>
-            <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="3"
-                aria-label="Slide 4"></button>
+    <main id="main" role="main">
+        <h1 class="sr-only">Condizioni di Utilizzo</h1>
+
+        <script type="text/javascript">
+            if (dataLayer) dataLayer.push(JSON.parse("{\"pageCategory1\":\"site\",\"pageCategory2\":\"info\",\"userLoggedIn\":\"f\",\"userId\":\"na\",\"userSex\":\"na\",\"userAge\":\"na\",\"userRegisterDate\":null,\"venue\":\"Torino\",\"productId\":\"na\",\"productTitle\":\"na\",\"productType\":\"na\",\"productGenres\":null,\"productDistributor\":\"na\"}"));
+
+        </script>
+
         </div>
+        <div id="article-content-area" class="generic-content content-light content-light--solid">
 
-        <!-- Inner -->
-        <div class="carousel-inner">
-            <!-- Single item -->
-            <div class="carousel-item active">
-                <img src="img/black-adam.png" class="d-block w-100" alt="Sunset Over the City" />
-            </div>
-
-            <!-- Single item -->
-            <div class="carousel-item">
-                <img src="img/dampyr.jpeg" class="d-block w-100" alt="Canyon at Nigh" />
-            </div>
-
-            <!-- Single item -->
-            <div class="carousel-item">
-                <img src="img/wakanda-forever.jpg" class="d-block w-100" alt="Cliff Above a Stormy Sea" />
-            </div>
-            <div class="carousel-item">
-                <img src="img/halloween-ends.jpg" class="d-block w-100" alt="Cliff Above a Stormy Sea" />
-            </div>
-        </div>
-        <!-- Inner -->
-
-        <!-- Controls -->
-        <button class="carousel-control-prev" type="button" data-mdb-target="#carouselBasicExample"
-            data-mdb-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-mdb-target="#carouselBasicExample"
-            data-mdb-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-    <!-- Carousel wrapper -->
-
-    <h1 class="my-5">Prenotazioni</h1>
-    <section>
-<<<<<<< Updated upstream
-        <div class="container" id="containerPrenotazioni">
-            <div class="row">
-                <div class="col">
-                    <div class="card">
-                        <img src="img/film/black_adam.jpg" class="card-img-top" alt="Fissure in Sandstone" />
-                        <div class="card-body row">
-                            <h4 class="card-title">Black Adama</h4>
-                            <div class="col text-start">
-                                <h5 class="mt-2"><i class="far fa-calendar-alt"></i> 2022/11/11</h5>
-                                <h5 class="mt-2"><i class="far fa-clock"></i> 18:30</h5>
-                                <h5 class="mt-2"><i class="fas fa-person-booth" style="color: white;"></i> Sala: 3</h5>
-                                <h5 class="mt-2"><i class="fa-solid fa-chair" style="color: white;"></i> Posto: 43</h5>
-                            </div>
-                            <div class="col">
-                                <img class="mt-2 mb-3" src="img/qr.png" alt="" style="max-width: 110px;">
-                            </div>
-                            <div class="rating pb-0">
-                                <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label>
-                                <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label>
-                                <input type="radio" name="rating" value="3" id="3"><label for="3">☆</label>
-                                <input type="radio" name="rating" value="2" id="2"><label for="2">☆</label>
-                                <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label>
-                            </div>
-                        </div>
-                    </div>
+            <div class="container container-tiny generic-content__text written-content">
+                <div class="wysiwyg">
+                    <p><span style="font-size: 19px; color: #F18E00;">Contenuti di questo sito Web</span><br>
+                        <br>
+                        Le informazioni ed il materiale contenuti su questo sito (interfaccia grafica, immagini, testi,
+                        organizzazione delle informazioni, fotografie, etc.) sono di proprietà di Somnia Cinema 1
+                        S.p.A. e, ove non specificato diversamente, sono tutelati dalla legge sul diritto di autore e
+                        dalle altre norme a protezione della proprietà intellettuale ed industriale. Somnia Cinema 1
+                        S.p.a. ha la facoltà di modificare in qualsiasi momento ed a propria discrezione i contenuti e
+                        del presente sito, nonché dei servizi offerti. <br>
+                        <br>
+                        Tale materiale non può essere copiato, riprodotto, ripubblicato, trasmesso o distribuito in
+                        qualunque forma, anche solo parzialmente, senza l'autorizzazione di Somnia Cinema 1 S.p.A. I
+                        marchi registrati sono di proprietà di Somnia Cinema 1 S.p.A. e non possono essere utilizzati
+                        senza il suo preventivo consenso scritto. <br>
+                        <br>
+                        Somnia Cinema 1 S.p.A. s'impegnerà a rendere il servizio continuativo ed il sito funzionale;
+                        non può tuttavia garantire che le informazioni ed i servizi siano disponibili interruzioni,
+                        sospensioni o ritardi o che il software sia esente da vizi od errori. Di conseguenza, salvi i
+                        limiti inderogabili di legge, in nessun caso, Somnia Cinema 1 S.p.A. potrà essere ritenuta
+                        responsabile per fatti e/o danni che possano derivare all'utente e/o a terzi dall'uso o dal
+                        mancato utilizzo del presente sito e/o delle sue informazioni o servizi.
+                    </p>
+                    <p><span style="font-size: 19px; color: #F18E00;">Cookies </span><br>
+                        I cookie sono file di testo che il sito invia al computer dell'utente che vi si connette. <br>
+                        I cookies non danneggiano i computer ai quali sono inviati e non sono in grado di registrare o
+                        modificare in alcun modo le informazioni personali ed i dati presenti nel sistema. <br>
+                        Mediante i cookies viene rilevato il percorso di navigazione effettuato dall'utente sul sito e
+                        ciò all'unico scopo di migliorarne la fruibilità e/o di personalizzarne i contenuti secondo le
+                        esigenze degli utilizzatori.
+                    </p>
+                    <p><span style="font-size: 19px; color: #F18E00;">Registrazione</span><br>
+                        Somnia Cinema 1 S.p.A. assicura la massima riservatezza nel trattamento dei dati personali,
+                        nel rispetto della normativa vigente in materia di privacy.
+                        Agli utenti che decidono volontariamente di registrarsi verranno chiesti alcuni dati personali.
+                        Questi sono utilizzati solo da personale autorizzato dalla Somnia Cinema 1 S.p.A.
+                        La raccolta dei dati ha lo scopo di garantire all'utente un servizio migliore o l'accesso ad
+                        aree riservate. <br>
+                        Conformemente all'art. 7 del D.Lgs. 196/03 l'interessato può in qualunque momento chiedere di
+                        poter controllare, modificare, aggiornare, rettificare, integrare o cancellare i dati che lo
+                        riguardano.
+                        I dati sono archiviati su data base elettronici e trattati con modalità informatizzate e non
+                        verranno in alcun caso comunicati, trasmessi, diffusi, venduti, noleggiati o in alcun modo resi
+                        accessibili a terzi. <br>
+                        I dati personali sono conservati da Somnia Cinema 1 S.p.a., Piazza Augusto Imperatore 3,
+                        00186 Roma. </p>
+                    <p><span style="font-size: 19px; color: #F18E00;">Collegamenti ad altri siti</span><br>
+                        Questo sito Web può contenere collegamenti ad altri siti Web. I siti ai quali rimandano tali
+                        collegamenti non sono sotto il controllo di Somnia Cinema 1 S.p.A., che, pertanto, non è
+                        responsabile del loro contenuto.</p>
+                    <p><span style="font-size: 19px; color: #F18E00;">Termini e condizioni di utilizzo</span><br>
+                        L’utilizzazione del Sito è subordinata alla presa visione, accettazione e rispetto dei termini e
+                        delle condizioni qui stabilite. In caso di mancata accettazione si è invitati a non utilizzare
+                        il Sito né a scaricare alcun materiale dallo stesso.</p>
                 </div>
             </div>
-=======
-        <div class="container"  id="containerPrenotazioni">
->>>>>>> Stashed changes
+
+
+        </div>
+        <div class="container expand-small">
+
+        </div>
+        <div>
 
         </div>
 
+    </main>
 
-
-
-
-    </section>
 
 
 
@@ -331,7 +320,6 @@
         <!-- Copyright -->
     </footer>
     <!-- Footer -->
-
 
     <!-- Modal Login -->
     <div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
