--- a/News&Offerte.html
+++ b/News&Offerte.html
@@ -279,16 +279,13 @@
                             Note Legali
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Privacy Policy</a>
+                            <a href="Privacy.html" class="text-reset">Privacy Policy</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Cookie Policy</a>
+                            <a href="Cookie.html" class="text-reset">Cookie Policy</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Condizioni di utilizzo</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Regolamenti</a>
+                            <a href="Condizioni.html" class="text-reset">Condizioni di utilizzo</a>
                         </p>
                     </div>
                     <!-- Grid column -->
