--- a/Utente privato.html
+++ b/Utente privato.html
@@ -307,10 +307,10 @@
                             <i class="fas fa-gem me-3 text-secondary"></i>Somnia Cinema
                         </h6>
                         <p>
-                            Chi siamo
+                            <a href="chisiamo.html" class="text-reset">Chi siamo</a>
                         </p>
                         <p>
-                            Lavora con noi
+                            <a href="lavoraconnoi.html" class="text-reset">Lavora con noi</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -340,13 +340,13 @@
                             Useful links
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Pricing</a>
+                            <a href="pricing.html" class="text-reset">Pricing</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Help</a>
+                            <a href="help.html" class="text-reset">Help</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">FAQ</a>
+                            <a href="faq.html" class="text-reset">FAQ</a>
                         </p>
                     </div>
                     <!-- Grid column -->
