--- a/chisiamo.html
+++ b/chisiamo.html
@@ -181,10 +181,10 @@
                             <i class="fas fa-gem me-3 text-secondary"></i>Somnia Cinema
                         </h6>
                         <p>
-                            Chi siamo
+                            <a href="chisiamo.html" class="text-reset">Chi siamo</a>
                         </p>
                         <p>
-                            Lavora con noi
+                            <a href="lavoraconnoi.html" class="text-reset">Lavora con noi</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -196,16 +196,13 @@
                             Note Legali
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Privacy Policy</a>
+                            <a href="Privacy.html" class="text-reset">Privacy Policy</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Cookie Policy</a>
+                            <a href="Cookie.html" class="text-reset">Cookie Policy</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Condizioni di utilizzo</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Regolamenti</a>
+                            <a href="Condizioni.html" class="text-reset">Condizioni di utilizzo</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -217,13 +214,13 @@
                             Useful links
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Pricing</a>
+                            <a href="pricing.html" class="text-reset">Pricing</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Help</a>
+                            <a href="help.html" class="text-reset">Help</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">FAQ</a>
+                            <a href="faq.html" class="text-reset">FAQ</a>
                         </p>
                     </div>
                     <!-- Grid column -->
