--- a/admin.html
+++ b/admin.html
@@ -94,7 +94,7 @@
 
                     <!-- Icon -->
                     <a class="text-reset" href="#">
-                        <img src="img/icona_carrello.png" alt="" width="77re">
+                        <img src="img/icona_carrello.png" alt="" width="77re" id="iconaCarello">
                     </a>
                 </div>
                 <!-- Right elements -->
