--- a/comingsoon.html
+++ b/comingsoon.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News & Offerte</title>
+    <title>Dream</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
@@ -121,108 +121,60 @@
         <!-- Navbar -->
     </header>
 
-    <!-- RIGHE E COLONNE NEWS -->
-    <div class="container">
-        <h1 id="TitoloNews"> NEWS & OFFERTE</h1>
-        <div class="row mt-5" id="testo">
-            <div class="col">
-                <img src="https://cdn.discordapp.com/attachments/980551328537399370/1037042135700082698/somnicard_fronte-retro.png"
-                    class="ImgCards mb-3 mt-3" alt="" height="300vw">
+
+    <!-- Carousel wrapper -->
+    <div id="carouselBasicExample" class="carousel slide carousel-fade mb-5" data-mdb-ride="carousel">
+        <!-- Indicators -->
+        <div class="carousel-indicators">
+            <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="2"
+                aria-label="Slide 3"></button>
+            <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="3"
+                aria-label="Slide 4"></button>
+        </div>
+
+        <!-- Inner -->
+        <div class="carousel-inner">
+            <!-- Single item -->
+            <div class="carousel-item active">
+                <img src="img/black-adam.png" class="d-block w-100" alt="Sunset Over the City" />
             </div>
-            <div class="col fs-3">
-                <strong>
-                    <p class="titoloNews text-start mt-5">SOMNICARDS!</p>
-                </strong>
-                <p class="descrizione text-start"> Scopri le carte prepagate <b>SomniCards</b>, il vantaggio è unico!
-                    Puoi
-                    acquistare 5 biglietti a un prezzo davvero vantaggioso.</p>
+
+            <!-- Single item -->
+            <div class="carousel-item">
+                <img src="img/dampyr.jpeg" class="d-block w-100" alt="Canyon at Nigh" />
+            </div>
+
+            <!-- Single item -->
+            <div class="carousel-item">
+                <img src="img/wakanda-forever.jpg" class="d-block w-100" alt="Cliff Above a Stormy Sea" />
+            </div>
+            <div class="carousel-item">
+                <img src="img/halloween-ends.jpg" class="d-block w-100" alt="Cliff Above a Stormy Sea" />
             </div>
         </div>
-        <div class="row">
-            <div class="col">
-                <img src="https://cdn.discordapp.com/attachments/980551328537399370/1037048335799959604/gift_cards.png"
-                    alt="" height="300vw" class="ImgCards mb-3 mt-3">
-            </div>
-            <div class="col fs-3">
-                <strong>
-                    <p class="titoloNews text-start">GIFT CARDS</p>
-                </strong>
-                <p class="descrizione text-start"> Scopri la carta regalo spendibile in biglietteria o al bar, ideale
-                    per gli amanti
-                    del cinema e per ogni occasione speciale.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <img src="https://cdn.discordapp.com/attachments/1025133315637915648/1037361086225186908/bubucard.png"
-                    alt="" height="300vw" class="ImgCards mb-3 mt-3">
-            </div>
-            <div class="col fs-3">
-                <strong>
-                    <p class="titoloNews text-start">BUBUCARDS</p>
-                </strong>
-                <p class="descrizione text-start"> Scopri tutti i vantaggi delle <b>BubuCards</b> carta fedeltà che
-                    premia i nostri
-                    clienti più affezionati con offerte, promozioni e sorprese esclusive.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <img src="https://www.ucicinemas.it/media/content/2022/10/06/privatescreening-1.png" alt=""
-                    height="300vw" class="mb-3 mt-3">
-            </div>
-            <div class="col fs-3">
-                <strong>
-                    <p class="titoloNews text-start">SALA RISERVATA</p>
-                </strong>
-                <p class="descrizione text-start"> Ti piacerebbe organizzare una proiezione riservata con la tua
-                    famiglia o i tuoi
-                    amici? Da Somnia il sogno diventa realtà! scopri tutti i dettagli.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <img src="https://www.ucicinemas.it/media/content/2022/09/29/kidsbirthday-1.png" alt="" height="300vw"
-                    class="mb-3 mt-3">
-            </div>
-            <div class="col fs-3">
-                <strong>
-                    <p class="titoloNews text-start">FESTE DI COMPLEANNO</p>
-                </strong>
-                <p class="descrizione text-start"> Vuoi rendere unica e speciale la tua festa di compleanno? Scopri il
-                    pacchetto
-                    dedicato di Somnia per festeggiare come una vera star.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <img src="https://www.ucicinemas.it/media/content/2022/09/29/wedding.png" alt="" height="300vw"
-                    class="mb-3 mt-3">
-            </div>
-            <div class="col fs-3">
-                <strong>
-                    <p class="titoloNews text-start">WEDDING</p>
-                </strong>
-                <p class="descrizione text-start">Tutte le tue emozioni possono rivivere sul grande schermo: la tua
-                    proposta di
-                    matrimonio, le immagini di famiglia e tutto ciò che desideri può diventare ancora più magico in una
-                    sala del nostro cinema! Scopri di più direttamente presso Somnia Cinema </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <img src="https://www.ucicinemas.it/media/content/2022/10/06/schoolscreening-1.png" alt=""
-                    height="300vw" class="mb-3 mt-3">
-            </div>
-            <div class="col fs-3">
-                <strong>
-                    <p class="titoloNews text-start">PROIEZIONI PER LE SCUOLE</p>
-                </strong>
-                <p class="descrizione text-start"> Somnia Cinema è la location ideale per una festa di fine anno
-                    scolastico davvero
-                    indimenticabile, oppure una gita con il centro estivo. Scopri tutte le opportunità dedicate alle
-                    scuole, chiedendo direttamente a noi. </p>
-            </div>
+        <!-- Inner -->
+
+        <!-- Controls -->
+        <button class="carousel-control-prev" type="button" data-mdb-target="#carouselBasicExample"
+            data-mdb-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-mdb-target="#carouselBasicExample"
+            data-mdb-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <!-- Carousel wrapper -->
+
+
+    <div class="container-film gy-5">
+        <div class="container" id="containerFilmArrivo">
         </div>
     </div>
 
@@ -264,10 +216,10 @@
                             <i class="fas fa-gem me-3 text-secondary"></i>Somnia Cinema
                         </h6>
                         <p>
-                            <a href="chisiamo.html" class="text-reset">Chi siamo</a>
+                            Chi siamo
                         </p>
                         <p>
-                            <a href="lavoraconnoi.html" class="text-reset">Lavora con noi</a>
+                            Lavora con noi
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -279,13 +231,16 @@
                             Note Legali
                         </h6>
                         <p>
-                            <a href="Privacy.html" class="text-reset">Privacy Policy</a>
+                            <a href="#!" class="text-reset">Privacy Policy</a>
                         </p>
                         <p>
-                            <a href="Cookie.html" class="text-reset">Cookie Policy</a>
+                            <a href="#!" class="text-reset">Cookie Policy</a>
                         </p>
                         <p>
-                            <a href="Condizioni.html" class="text-reset">Condizioni di utilizzo</a>
+                            <a href="#!" class="text-reset">Condizioni di utilizzo</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Regolamenti</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -297,13 +252,13 @@
                             Useful links
                         </h6>
                         <p>
-                            <a href="pricing.html" class="text-reset">Pricing</a>
+                            <a href="#!" class="text-reset">Pricing</a>
                         </p>
                         <p>
-                            <a href="help.html" class="text-reset">Help</a>
+                            <a href="#!" class="text-reset">Help</a>
                         </p>
                         <p>
-                            <a href="faq.html" class="text-reset">FAQ</a>
+                            <a href="#!" class="text-reset">FAQ</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -360,12 +315,14 @@
                             <div class="form-outline form-white mb-4">
                                 <input type="email" id="emailLogin" class="form-control form-control-lg" />
                                 <label class="form-label" for="emailLogin">Email</label>
+                                <div class="" id="formEmailLogin" style="display: none; color: black"></div>
                             </div>
 
                             <div class="form-outline form-white mb-4">
                                 <input type="password" id="passwordLogin" class="form-control form-control-lg"
                                     autocomplete="off" />
                                 <label class="form-label" for="passwordLogin">Password</label>
+                                <div class="" id="formPasswordLogin" style="display: none; color: black"></div>
                             </div>
 
                             <p class="small pb-lg-2"><a class="text-white-50" href="#!" data-mdb-toggle="modal"
@@ -407,8 +364,8 @@
                         <p class="text-white-50 mb-5">Inserire email!</p>
 
                         <div class="form-outline form-white mb-4">
-                            <input type="email" id="emailLogin" class="form-control form-control-lg" />
-                            <label class="form-label" for="emailLogin">Email</label>
+                            <input type="email" id="emailRecupera" class="form-control form-control-lg" />
+                            <label class="form-label" for="emailRecupera">Email</label>
                         </div>
 
                         <button class="btn btn-outline-light btn-lg px-5" type="submit"
@@ -441,46 +398,52 @@
                 <div class="modal-body text-center">
                     <div class="pb-5">
                         <div id="formRegister">
-                            <h2 class="fw-bold mb-2 text-uppercase">Registrazione</h2>
-                            <p class="text-white-50 mb-5">Inserire i dati per completare la registrazione!</p>
+                            <form>
+                                <h2 class="fw-bold mb-2 text-uppercase">Registrazione</h2>
+                                <p class="text-white-50 mb-5">Inserire i dati per completare la registrazione!</p>
 
-                            <div class="form-outline form-white mb-4">
-                                <input type="email" id="emailRegister" class="form-control form-control-lg" />
-                                <label class="form-label" for="emailRegister">Email</label>
-                            </div>
+                                <div class="form-outline form-white mb-4">
+                                    <input type="email" id="emailRegister" class="form-control form-control-lg" />
+                                    <label class="form-label" for="emailRegister">Email</label>
+                                    <div class="" id="formEmailRegister" style="display: none; color: black"></div>
+                                </div>
 
-                            <div class="form-outline form-white mb-4">
-                                <input type="text" id="usernameRegister" class="form-control form-control-lg" />
-                                <label class="form-label" for="usernameRegister">Username</label>
-                            </div>
+                                <div class="form-outline form-white mb-4">
+                                    <input type="text" id="usernameRegister" class="form-control form-control-lg" />
+                                    <label class="form-label" for="usernameRegister">Username</label>
+                                    <div class="" id="formUsernameRegister" style="display: none; color: black"></div>
+                                </div>
 
-                            <div class="form-outline form-white mb-4">
-                                <input type="date" id="dateRegister" class="form-control form-control-lg" />
-                                <label class="form-label" for="dateRegister">Data di nascità</label>
-                            </div>
+                                <div class="form-outline form-white mb-4">
+                                    <input type="date" id="dateRegister" class="form-control form-control-lg" />
+                                    <label class="form-label" for="dateRegister">Data di nascità</label>
+                                </div>
 
-                            <div class="form-outline form-white mb-4">
-                                <input type="password" id="passwordRegister" class="form-control form-control-lg" />
-                                <label class="form-label" for="passwordRegister">Password</label>
-                            </div>
+                                <div class="form-outline form-white mb-4">
+                                    <input type="password" id="passwordRegister" class="form-control form-control-lg" />
+                                    <label class="form-label" for="passwordRegister">Password</label>
+                                    <div class="" id="formPasswordRegister" style="display: none; color: black"></div>
+                                </div>
+                                
+                                <div class="form-outline form-white mb-4">
+                                    <input type="password" id="passwordRegisterConfirm"
+                                        class="form-control form-control-lg" />
+                                    <label class="form-label" for="passwordRegisterConfirm">Conferma Password</label>
+                                    <div class="" id="formConfermaPasswordRegister" style="display: none; color: black"></div>
+                                </div>
 
-                            <div class="form-outline form-white mb-4">
-                                <input type="password" id="passwordRegisterConfirm"
-                                    class="form-control form-control-lg" />
-                                <label class="form-label" for="passwordRegisterConfirm">Conferma Password</label>
-                            </div>
+                                <div class="form-check text-start">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" required>
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                        Accetti i termini e le condizioni.
+                                    </label>
+                                </div>
 
-                            <div class="form-check text-start">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                <label class="form-check-label" for="flexCheckDefault">
-                                    Accetti i termini e le condizioni.
-                                </label>
-                            </div>
-
-                            <div class="container mt-3">
-                                <button class="btn btn-outline-light btn-lg px-5" type="submit"
-                                    id="submitRegister">Registrati</button>
-                            </div>
+                                <div class="container mt-3">
+                                    <button class="btn btn-outline-light btn-lg px-5" type="submit"
+                                        id="submitRegister">Registrati</button>
+                                </div>
+                            </form>
                         </div>
 
                         <div class="d-flex justify-content-center text-center mt-4 pt-1">
