--- a/prenotazioni.html
+++ b/prenotazioni.html
@@ -51,7 +51,7 @@
                                 <a class="nav-link sezione" href="News&Offerte.html">News</a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link sezione" href="#">Coming soon</a>
+                                <a class="nav-link sezione" href="comingsoon.html">Coming soon</a>
                             </li>
                             <li class="nav-item mx-2">
                                 <p style="color: black">asdasdasdasd</p>
@@ -174,37 +174,8 @@
 
     <h1 class="my-5">Prenotazioni</h1>
     <section>
-<<<<<<< Updated upstream
+
         <div class="container" id="containerPrenotazioni">
-            <div class="row">
-                <div class="col">
-                    <div class="card">
-                        <img src="img/film/black_adam.jpg" class="card-img-top" alt="Fissure in Sandstone" />
-                        <div class="card-body row">
-                            <h4 class="card-title">Black Adama</h4>
-                            <div class="col text-start">
-                                <h5 class="mt-2"><i class="far fa-calendar-alt"></i> 2022/11/11</h5>
-                                <h5 class="mt-2"><i class="far fa-clock"></i> 18:30</h5>
-                                <h5 class="mt-2"><i class="fas fa-person-booth" style="color: white;"></i> Sala: 3</h5>
-                                <h5 class="mt-2"><i class="fa-solid fa-chair" style="color: white;"></i> Posto: 43</h5>
-                            </div>
-                            <div class="col">
-                                <img class="mt-2 mb-3" src="img/qr.png" alt="" style="max-width: 110px;">
-                            </div>
-                            <div class="rating pb-0">
-                                <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label>
-                                <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label>
-                                <input type="radio" name="rating" value="3" id="3"><label for="3">☆</label>
-                                <input type="radio" name="rating" value="2" id="2"><label for="2">☆</label>
-                                <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-=======
-        <div class="container"  id="containerPrenotazioni">
->>>>>>> Stashed changes
 
         </div>
 
