--- a/profilo.html
+++ b/profilo.html
@@ -51,7 +51,7 @@
                                 <a class="nav-link sezione" href="News&Offerte.html">News</a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link sezione" href="#">Coming soon</a>
+                                <a class="nav-link sezione" href="comingsoon.html">Coming soon</a>
                             </li>
                             <li class="nav-item mx-2">
                                 <p style="color: black">asdasdasdasd</p>
@@ -111,7 +111,7 @@
                     </div>
                     <!-- Icon -->
                     <a class="text-reset" href="#">
-                        <img src="img/icona_carrello.png" alt="" width="77re">
+                        <img src="img/icona_carrello.png" alt="" width="77re" id="iconaCarello">
                     </a>
                 </div>
                 <!-- Right elements -->
